chore: make biome ignore unknown files

--- a/biome.json
+++ b/biome.json
@@ -45,6 +45,7 @@
 		}
 	},
 	"files": {
-		"ignore": ["node_modules", "dist", "pnpm-lock.yaml", ".husky"]
+		"ignore": ["node_modules", "dist", "pnpm-lock.yaml", ".husky"],
+		"ignoreUnknown": true
 	}
 }
