--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -23,6 +23,7 @@
 		"@nestjs/common": "10.0.0",
 		"@nestjs/core": "10.0.0",
 		"@nestjs/platform-express": "10.0.0",
+		"@nestjs/platform-fastify": "10.3.10",
 		"reflect-metadata": "0.2.0",
 		"rxjs": "7.8.1"
 	},
@@ -30,6 +31,8 @@
 		"@nestjs/cli": "10.0.0",
 		"@nestjs/schematics": "10.0.0",
 		"@nestjs/testing": "10.0.0",
+		"@swc/cli": "0.4.0",
+		"@swc/core": "1.7.6",
 		"@types/express": "4.17.17",
 		"@types/jest": "29.5.2",
 		"@types/node": "20.3.1",
