feat: create typeorm data source for migrations

--- a/biome.json
+++ b/biome.json
@@ -38,6 +38,9 @@
 			"bracketSameLine": false,
 			"quoteStyle": "single",
 			"attributePosition": "auto"
+		},
+		"parser": {
+			"unsafeParameterDecoratorsEnabled": true
 		}
 	},
 	"json": {
