--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -22,10 +22,14 @@
 	"dependencies": {
 		"@nestjs/common": "10.0.0",
 		"@nestjs/core": "10.0.0",
+		"@nestjs/mapped-types": "*",
 		"@nestjs/platform-express": "10.0.0",
 		"@nestjs/platform-fastify": "10.3.10",
+		"dotenv": "16.4.5",
+		"pg": "^8.12.0",
 		"reflect-metadata": "0.2.0",
-		"rxjs": "7.8.1"
+		"rxjs": "7.8.1",
+		"typeorm": "^0.3.20"
 	},
 	"devDependencies": {
 		"@nestjs/cli": "10.0.0",
