--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -12,6 +12,8 @@
 		"start:dev": "nest start --watch",
 		"start:debug": "nest start --debug --watch",
 		"start:prod": "node dist/main",
+		"migration:generate": "pnpm build && typeorm migration:generate -o -d ./dist/src/typeorm/data-source ./migrations/migration",
+		"migration:run": "typeorm migration:run -d ./dist/src/typeorm/data-source",
 		"lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
 		"test": "jest",
 		"test:watch": "jest --watch",
@@ -21,15 +23,20 @@
 	},
 	"dependencies": {
 		"@nestjs/common": "10.0.0",
+		"@nestjs/config": "3.2.3",
 		"@nestjs/core": "10.0.0",
 		"@nestjs/mapped-types": "*",
 		"@nestjs/platform-express": "10.0.0",
 		"@nestjs/platform-fastify": "10.3.10",
+		"@nestjs/typeorm": "10.0.2",
+		"class-transformer": "0.5.1",
+		"class-validator": "0.14.1",
 		"dotenv": "16.4.5",
 		"pg": "^8.12.0",
-		"reflect-metadata": "0.2.0",
+		"reflect-metadata": "0.2.2",
 		"rxjs": "7.8.1",
-		"typeorm": "^0.3.20"
+		"typeorm": "^0.3.20",
+		"typeorm-naming-strategies": "4.1.0"
 	},
 	"devDependencies": {
 		"@nestjs/cli": "10.0.0",
