--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -22,12 +22,14 @@
 		"test:e2e": "jest --config ./test/jest-e2e.json"
 	},
 	"dependencies": {
+		"@fastify/static": "7.0.4",
 		"@nestjs/common": "10.0.0",
 		"@nestjs/config": "3.2.3",
 		"@nestjs/core": "10.0.0",
 		"@nestjs/mapped-types": "*",
 		"@nestjs/platform-express": "10.0.0",
 		"@nestjs/platform-fastify": "10.3.10",
+		"@nestjs/swagger": "7.4.0",
 		"@nestjs/typeorm": "10.0.2",
 		"class-transformer": "0.5.1",
 		"class-validator": "0.14.1",
