--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
 		"@commitlint/cli": "^19.4.0",
 		"@commitlint/config-conventional": "^19.2.2",
 		"husky": "9.1.4",
-		"lint-staged": "15.2.8"
+		"lint-staged": "15.2.8",
+		"stylelint": "16.8.1",
+		"stylelint-config-standard": "36.0.1"
 	},
 	"lint-staged": {
 		"**/*": "biome check --write"
