chore: change commands in server, and change biome config to ignore metadata.ts
Changed commands: format and lint, now they use biome
Added commands: check

--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -6,15 +6,16 @@
 	"private": true,
 	"license": "UNLICENSED",
 	"scripts": {
+		"format": "biome format --write",
+		"lint": "biome lint --write",
+		"check": "biome check --write",
 		"build": "nest build",
-		"format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
 		"start": "cross-env NODE_ENV=production nest start",
 		"start:dev": "nest start --watch",
 		"start:debug": "nest start --debug --watch",
 		"start:prod": "cross-env NODE_ENV=production node dist/main",
 		"migration:generate": "pnpm build && typeorm migration:generate -o -d ./dist/typeorm/data-source ./migrations/migration",
 		"migration:run": "typeorm migration:run -d ./dist/typeorm/data-source",
-		"lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
 		"test": "jest",
 		"test:watch": "jest --watch",
 		"test:cov": "jest --coverage",
