--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -23,6 +23,8 @@
 		"test:e2e": "jest --config ./test/jest-e2e.json"
 	},
 	"dependencies": {
+		"@blazity/nest-file-fastify": "1.0.0",
+		"@fastify/multipart": "8.3.0",
 		"@fastify/static": "7.0.4",
 		"@nestjs/common": "10.4.0",
 		"@nestjs/config": "3.2.3",
@@ -35,7 +37,9 @@
 		"class-transformer": "0.5.1",
 		"class-validator": "0.14.1",
 		"dotenv": "16.4.5",
+		"fastify": "4.28.1",
 		"luxon": "3.5.0",
+		"node-mime-types": "1.1.2",
 		"pg": "8.12.0",
 		"reflect-metadata": "0.2.2",
 		"rxjs": "7.8.1",
