chore: add console ninja extension to recommended extensions

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,11 +1,12 @@
 {
-  "recommendations": [
-    "Angular.ng-template",
-    "biomejs.biome",
-    "aaron-bond.better-comments",
-    "vivaxy.vscode-conventional-commits",
-    "mikestead.dotenv",
-    "yoavbls.pretty-ts-errors",
-    "gruntfuggly.todo-tree"
-  ]
+	"recommendations": [
+		"Angular.ng-template",
+		"biomejs.biome",
+		"aaron-bond.better-comments",
+		"vivaxy.vscode-conventional-commits",
+		"mikestead.dotenv",
+		"yoavbls.pretty-ts-errors",
+		"gruntfuggly.todo-tree",
+		"wallabyjs.console-ninja"
+	]
 }
