--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
-	"editor.tabSize": 2,
+	"editor.detectIndentation": false,
+	"editor.insertSpaces": false,
 	"editor.tabCompletion": "on",
 	"[javascript]": {
 		"editor.defaultFormatter": "biomejs.biome"
