--- a/apps/client/angular.json
+++ b/apps/client/angular.json
@@ -21,12 +21,7 @@
 						"browser": "src/main.ts",
 						"polyfills": ["zone.js"],
 						"tsConfig": "tsconfig.app.json",
-						"assets": [
-							{
-								"glob": "**/*",
-								"input": "public"
-							}
-						],
+						"assets": ["src/favicon.ico", "src/assets"],
 						"styles": ["src/styles.css"],
 						"scripts": [],
 						"server": "src/main.server.ts",
