--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -22,6 +22,8 @@
 		"@angular/router": "^18.1.0",
 		"@angular/ssr": "^18.1.3",
 		"express": "^4.18.2",
+		"lottie-web": "^5.12.2",
+		"ngx-lottie": "^12.0.0",
 		"rxjs": "~7.8.0",
 		"tslib": "^2.3.0",
 		"zone.js": "~0.14.3"
