--- a/apps/server/tsconfig.json
+++ b/apps/server/tsconfig.json
@@ -6,7 +6,8 @@
 		"emitDecoratorMetadata": true,
 		"experimentalDecorators": true,
 		"allowSyntheticDefaultImports": true,
-		"target": "ES2021",
+		"lib": ["ES2022"],
+		"target": "ES2022",
 		"sourceMap": true,
 		"outDir": "./dist",
 		"baseUrl": "./",
