--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -26,6 +26,7 @@
 		"@blazity/nest-file-fastify": "1.0.0",
 		"@fastify/multipart": "8.3.0",
 		"@fastify/static": "7.0.4",
+		"@nestjs-modules/mailer": "2.0.2",
 		"@nestjs/common": "10.4.0",
 		"@nestjs/config": "3.2.3",
 		"@nestjs/core": "10.4.0",
@@ -40,6 +41,7 @@
 		"fastify": "4.28.1",
 		"luxon": "3.5.0",
 		"node-mime-types": "1.1.2",
+		"nodemailer": "6.9.14",
 		"pg": "8.12.0",
 		"reflect-metadata": "0.2.2",
 		"rxjs": "7.8.1",
@@ -56,6 +58,7 @@
 		"@types/jest": "29.5.12",
 		"@types/luxon": "3.4.2",
 		"@types/node": "20.14.15",
+		"@types/nodemailer": "6.4.15",
 		"@types/supertest": "6.0.2",
 		"@typescript-eslint/eslint-plugin": "7.0.0",
 		"@typescript-eslint/parser": "7.0.0",
