chore: change commitlint and lint-staged pnpm commands

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 		"start:dev": "pnpm --parallel -r start:dev",
 		"build": "pnpm --parallel -r build",
 		"generate:docs": "pnpm --parallel -r generate:docs",
-		"commitlint": "pnpx commitlint -e",
+		"commitlint": "pnpm exec commitlint -e",
 		"prepare": "husky"
 	},
 	"keywords": [],
