--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,10 +14,11 @@
 		"editor.defaultFormatter": "biomejs.biome"
 	},
 	"[html]": {
-		"editor.defaultFormatter": "biomejs.biome"
+		"editor.defaultFormatter": "vscode.html-language-features"
 	},
 	"[css]": {
 		"editor.defaultFormatter": "biomejs.biome"
 	},
-	"material-icon-theme.activeIconPack": "nest"
+	"material-icon-theme.activeIconPack": "nest",
+	"editor.formatOnSave": true
 }
