--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -24,6 +24,7 @@
 		"express": "^4.18.2",
 		"lottie-web": "^5.12.2",
 		"rxjs": "~7.8.0",
+		"ts-results": "3.3.0",
 		"tslib": "^2.3.0",
 		"zone.js": "~0.14.3"
 	},
