--- a/apps/client/tsconfig.json
+++ b/apps/client/tsconfig.json
@@ -1,6 +1,7 @@
 {
 	"compileOnSave": false,
 	"compilerOptions": {
+		"baseUrl": "./src",
 		"outDir": "./dist/out-tsc",
 		"strict": true,
 		"noImplicitOverride": true,
@@ -16,7 +17,12 @@
 		"importHelpers": true,
 		"target": "ES2022",
 		"module": "ES2022",
-		"lib": ["ES2022", "dom"]
+		"lib": ["ES2022", "dom"],
+		"paths": {
+			"~/*": ["./app/*"],
+			"~assets/*": ["./assets/*"],
+			"~env/*": ["./environments/*"]
+		}
 	},
 	"angularCompilerOptions": {
 		"enableI18nLegacyMessageIdFormat": false,
