--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -21,8 +21,13 @@
 		"@angular/platform-server": "^18.1.0",
 		"@angular/router": "^18.1.0",
 		"@angular/ssr": "^18.1.3",
+		"@types/tinycolor2": "^1.4.6",
+		"TinyColor": "github:bgrins/TinyColor",
 		"express": "^4.18.2",
+		"remove": "^0.1.5",
 		"rxjs": "~7.8.0",
+		"tinycolor": "^0.0.1",
+		"tinycolor2": "^1.6.0",
 		"ts-results": "3.3.0",
 		"tslib": "^2.3.0",
 		"zone.js": "~0.14.3"
