--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -16,6 +16,7 @@
 		"@angular/compiler": "^18.1.0",
 		"@angular/core": "^18.1.0",
 		"@angular/forms": "^18.1.0",
+		"@angular/google-maps": "^18.2.4",
 		"@angular/platform-browser": "^18.1.0",
 		"@angular/platform-browser-dynamic": "^18.1.0",
 		"@angular/platform-server": "^18.1.0",
