fix: store google maps api key in secrets.ts file

--- a/apps/client/tsconfig.json
+++ b/apps/client/tsconfig.json
@@ -21,7 +21,9 @@
 		"paths": {
 			"~/*": ["./app/*"],
 			"~assets/*": ["./assets/*"],
-			"~env/*": ["./environments/*"]
+			"~env/*": ["./environments/*"],
+			"~src/*": ["./*"],
+			"~root/*": ["../*"]
 		},
 		"allowJs": true
 	},
