--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -7,6 +7,7 @@
 		"mikestead.dotenv",
 		"yoavbls.pretty-ts-errors",
 		"gruntfuggly.todo-tree",
-		"wallabyjs.console-ninja"
+		"wallabyjs.console-ninja",
+		"mjmlio.vscode-mjml"
 	]
 }
