--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -40,11 +40,14 @@
 		"dotenv": "16.4.5",
 		"fastify": "4.28.1",
 		"luxon": "3.5.0",
+		"mjml": "4.15.3",
 		"node-mime-types": "1.1.2",
 		"nodemailer": "6.9.14",
 		"pg": "8.12.0",
 		"reflect-metadata": "0.2.2",
 		"rxjs": "7.8.1",
+		"ts-pattern": "^5.3.1",
+		"ts-xor": "1.3.0",
 		"typeorm": "0.3.20",
 		"typeorm-naming-strategies": "4.1.0"
 	},
@@ -57,6 +60,8 @@
 		"@types/bcrypt": "5.0.2",
 		"@types/jest": "29.5.12",
 		"@types/luxon": "3.4.2",
+		"@types/mjml": "4.7.4",
+		"@types/mjml-core": "4.15.0",
 		"@types/node": "20.14.15",
 		"@types/nodemailer": "6.4.15",
 		"@types/supertest": "6.0.2",
