--- a/apps/client/angular.json
+++ b/apps/client/angular.json
@@ -23,7 +23,7 @@
 						"polyfills": ["zone.js"],
 						"tsConfig": "tsconfig.app.json",
 						"assets": ["src/favicon.ico", "src/assets"],
-						"styles": ["src/styles.css"],
+						"styles": ["src/styles.css", "node_modules/ngx-toastr/toastr.css"],
 						"scripts": []
 					},
 					"configurations": {
@@ -82,7 +82,7 @@
 								"input": "public"
 							}
 						],
-						"styles": ["src/styles.css"],
+						"styles": ["src/styles.css", "node_modules/ngx-toastr/toastr.css"],
 						"scripts": []
 					}
 				}
