--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -25,6 +25,7 @@
 		"TinyColor": "github:bgrins/TinyColor",
 		"lottie-web": "^5.12.2",
 		"ngx-lottie": "^12.0.0",
+		"ngx-toastr": "19.0.0",
 		"remove": "^0.1.5",
 		"rxjs": "~7.8.0",
 		"tinycolor": "^0.0.1",
