feat!: add photo to my routes

--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -26,6 +26,7 @@
 		"@blazity/nest-file-fastify": "1.0.0",
 		"@fastify/multipart": "8.3.0",
 		"@fastify/static": "7.0.4",
+		"@mapbox/polyline": "1.2.1",
 		"@nestjs-modules/mailer": "2.0.2",
 		"@nestjs/common": "10.4.0",
 		"@nestjs/config": "3.2.3",
@@ -60,6 +61,7 @@
 		"@types/bcrypt": "5.0.2",
 		"@types/jest": "29.5.12",
 		"@types/luxon": "3.4.2",
+		"@types/mapbox__polyline": "1.0.5",
 		"@types/mjml": "4.7.4",
 		"@types/mjml-core": "4.15.0",
 		"@types/node": "20.14.15",
