--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -40,6 +40,8 @@
 		"class-validator": "0.14.1",
 		"dotenv": "16.4.5",
 		"fastify": "4.28.1",
+		"google-auth-library": "^9.15.1",
+		"googleapis": "^144.0.0",
 		"luxon": "3.5.0",
 		"mjml": "4.15.3",
 		"node-mime-types": "1.1.2",
